--- a/package.json
+++ b/package.json
@@ -9,16 +9,36 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@googlemaps/js-api-loader": "^1.16.8",
+    "@hookform/resolvers": "^3.9.0",
+    "@react-email/components": "^0.0.25",
+    "@react-email/render": "^1.0.1",
+    "next": "14.2.7",
+    "node-fetch": "^3.3.2",
+    "nodemailer": "^6.9.15",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.7"
+    "react-email": "^3.0.1",
+    "react-hook-form": "^7.53.0",
+    "react-intersection-observer": "^9.13.1",
+    "react-youtube": "^10.1.0",
+    "resend": "^4.0.0",
+    "swiper": "^11.1.14",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@swc/helpers": "^0.5.13",
+    "@types/googlemaps": "^3.43.3",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.16",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "autoprefixer": "^10.4.20",
+    "css-loader": "^7.1.2",
+    "postcss": "^8.4.47",
+    "postcss-loader": "^8.1.1",
+    "style-loader": "^4.0.0",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
